# robotick-studio

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  README.md  build-and-test-launcher.sh  build-and-test-studio.sh  cf-config.json  index.html  install-vscode-robotick.sh  layout.json  layout.log.json  log.txt  package-lock.json  package.json  playwright.config.ts  refresh-goldens.sh  reinstall-vscode-robotick.sh  run-experimental-local-server.sh  run-launcher-cli.sh  run-local-server.sh  run-studio-dev-direct.sh  run-studio-dev.sh  run-studio-production-direct.sh  run-studio-production.sh  run-studio.sh  studio.template.yaml  sync-hub-s3.sh  sync-s3.sh  test-dist-server.sh  tree.log.txt  tsconfig.electron.json  tsconfig.json  vite.config.ts
deploy/: s3-deploy.sh
tools/robotick-cli/: package.json  pyproject.toml  tsconfig.json
tools/robotick-cli/src/: index.ts
tools/robotick-cli/src/robotick_cli/: __main__.py  command_result.py  hub.py  hub_client.py  instances.py  launcher.py  manifest.py  output.py  studio.py  studio_tree.py
tools/robotick-cli/src/robotick_cli/app/: context.py  errors.py
tools/robotick-cli/src/robotick_cli/interfaces/: argv.py  completion.py  repl.py
tools/robotick-cli/src/robotick_cli/language/: help.py  parse.py  registry.py  route.py
tools/robotick-cli/test/: cli.test.js
tools/robotick-cli/tests/: conftest.py  test_cli.py
tools/robotick-hub/: pyproject.toml
tools/robotick-hub/src/robotick_hub/: __init__.py  __main__.py  app.py  contracts.py  launcher.py  manifest.py  runtime.py  studio.py  tray.py  workspace.py
tools/robotick-hub/src/robotick_hub/abilities/: __init__.py  base.py
tools/robotick-hub/tests/: conftest.py  test_app.py  test_launcher_live_smoke.py  test_launcher_provider.py  test_studio_provider.py
tools/robotick-launcher/: .gitignore  README.md  kill_launcher_listener.sh  pyproject.toml  pytest.ini  start_launcher_listener.sh
tools/robotick-launcher/.github/workflows/: python-tests.yml
tools/robotick-launcher/docker/: esp32s3.Dockerfile  linux-arm64.Dockerfile
tools/robotick-launcher/docs/: stage-contracts.md
tools/robotick-launcher/src/robotick/: __init__.py
tools/robotick-launcher/src/robotick/launcher/: __init__.py  cli.py  config.py  discover_deps.py  discover_workloads.py  runtime_lock.py  utils.py
tools/robotick-launcher/tests/: conftest.py  sync-fixtures.sh
tools/robotick-launcher/tests/launcher/: test_clean.py  test_custom_stage_outputs.py  test_hub_ability_restart.py  test_install_deps.py  test_launcher_generate.py  test_launcher_list.py  test_listener_cors.py  test_listener_launch.py  test_prepare_project_docker.py  test_project_assets_route.py  test_project_schema.py  test_project_workspace_hydration.py  test_python_roots.py  test_rc_settings_asset_paths.py  test_relative_base_dir.py  test_remote_linux.py  test_run_profile.py  test_run_python_env.py  test_runtime_metrics.py  test_session_domain.py  test_stages.py  test_target_plan_direct.py  test_utils.py  test_workloads_discovery.py  test_workloads_layout_schema.py  test_workloads_registry.py  test_workloads_registry_default_synthesis.py  test_workloads_registry_project_dir_resolution.py
tools/robotick-launcher/tests/test_data/: refresh-goldens.sh  workloads_discovery.golden.json  workloads_registry.golden.json
(+776 files in other folders)
