[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotick-launcher"
version = "0.1.0"
description = "Robotick Launcher: Launcher CLI + Conductor REST API daemon"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{ name = "Paul Connor" }]
license = { text = "Apache-2.0" }
keywords = ["robotics", "robotick", "launcher", "conductor", "fastapi", "typer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0.1",
  "requests>=2.32",
  "jinja2>=3.1",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.28",
  # optional: linters/formatters
  # "ruff>=0.5", "black>=24.3"
]

[project.urls]
Homepage = "https://github.com/robotick-labs/robotick-studio/tree/main/tools/robotick-launcher"
Issues = "https://github.com/robotick-labs/robotick-studio/issues"

[project.scripts]
robotick-launcher = "robotick.launcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
# Include all files in the templates folder (CMake, cpp, headers, etc.)
"robotick.launcher.actions.launch" = ["templates/**"]

[tool.setuptools.packages.find]
where = ["src"]
